--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary ml-lg-2" href="#">Sign up</a>
+              <a class="btn btn-primary ml-lg-2" href="signUp2.html">Sign up</a>
             </li>
           </ul>
         </div>
